--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "passport-remember-me": "0.0.1",
     "react": "17.0.1",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
