--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "graphql": "^15.3.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.0",
+    "kbar": "^0.1.0-beta.19",
     "lambda-captcha": "^2.1.2",
     "mongodb": "^3.5.2",
     "nanoid": "^3.1.12",
