--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "graphql": "^15.3.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.0",
-    "kbar": "^0.1.0-beta.19",
     "lambda-captcha": "^2.1.2",
     "mongodb": "^3.5.2",
     "nanoid": "^3.1.12",
@@ -68,10 +67,12 @@
     "react-burger-menu": "^3.0.2",
     "react-codemirror2": "^7.2.1",
     "react-dom": "17.0.1",
+    "react-hotkeys": "^2.0.0",
     "react-ios-switch": "^0.1.19",
     "react-media": "^2.0.0-rc.1",
     "react-minimal-datetime-range": "^1.6.0",
     "react-spring": "^8.0.27",
+    "react-super-cmd": "^1.0.6",
     "react-toastify": "^7.0.3",
     "react-toolkit": "^2.0.0-alpha.3",
     "react-tooltip": "^4.2.11",
